<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetAndGuess</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_createGame">New Game</string>
    <string name="action_joinGame">Join Game</string>
    <string name="create_game_info">Please provide a short description of your location and some more detailed information how other users can find you. </string>
    <string name="game_id_information">This is the id of your game. Give this code to other player in order to let them join the game.</string>
    <string name="profile">Profile</string>
    <string name="score_label">Score:</string>
    <string name="username_label">User name:</string>
    <string name="firstname_label">Name:</string>  
    <string name="age_label">Age:</string>  
    <string name="city_label">City:</string>
    <string name="country_label">Country:</string>
    <string name="create_profile_error">Missing profile picture</string>
    <string name="profile_picture_missing_description">You need a profile picture to start playing.</string>
    <string name="create_game">Create Game</string>
    <string name="location_label">Location:</string>
    <string name="detail_label">Details:</string>
    <string name="create">Create</string>
    <string name="join_game">Join Game</string>
    <string name="join_game_description">Please enter the code of an existing game. You can obtain the code by finding another player.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="question">Question</string>
    <string name="skip_question">Skip question</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="done">Done</string>
    <string name="score">Continue</string>
    <string name="current_score">Score</string>
    <string name="total_score">Total Score</string>
    <string name="players">Player</string>

</resources>
