<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toolbar"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="24dp"
        android:text="@string/location_label"
        android:textColor="@color/Black87" />

    <EditText
        android:id="@+id/location_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/location_label"
        android:layout_toRightOf="@+id/location_label"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="Short location description"
        android:textColor="@color/Black87"
    >
    </EditText>

    <TextView
        android:id="@+id/detail_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location_label"
        android:layout_below="@+id/location_label"
        android:layout_marginTop="24dp"
        android:text="@string/detail_label"
        android:textColor="@color/Black87" />

    <EditText
        android:id="@+id/detail_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="6"
        android:layout_alignTop="@+id/detail_label"
        android:layout_alignLeft="@+id/location_edit"
        android:layout_alignRight="@+id/location_edit"
        android:ems="10"
        android:hint="Detailed location description"
        android:textColor="@color/Black87">
    </EditText>

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location_label"
        android:layout_alignRight="@+id/location_edit"
        android:layout_below="@+id/detail_edit"
        android:layout_marginTop="48dp"
        android:background="@drawable/green_button"
        android:text="@string/create" 
        android:onClick="createGame"/>

</RelativeLayout>