<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:clickable="true" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ImageButton
        android:id="@+id/profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:onClick="selectImage"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_contact_picture" />

    <TextView
        android:id="@+id/score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/score_display"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/score_display"
        android:text="@string/score_label"        
		android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/HighlightColor" />

    <TextView
        android:id="@+id/score_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profile_picture"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:background="@color/HighlightColor"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="0"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/create_profile_button"
        android:layout_alignLeft="@+id/profile_picture"
        android:layout_alignRight="@+id/score_display"
        android:layout_below="@+id/profile_picture"
        android:gravity="center"
        android:descendantFocusability="beforeDescendants"
    	android:focusableInTouchMode="true"
    	android:clickable="true" >

        <RelativeLayout
            android:id="@+id/fillout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
    		android:focusableInTouchMode="true" 
    		android:clickable="true">

            <TextView
                android:id="@+id/firstname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/firstname_label"    
                	    android:textAppearance="?android:attr/textAppearanceMedium"
                            
                android:textColor="@color/HighlightColor" />

            <EditText
                android:id="@+id/firstname_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/firstname_label"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/country_label"
                android:layout_marginLeft="12dp"
                android:ems="10"
                android:hint="Your name"
                                	    android:textAppearance="?android:attr/textAppearanceLarge"
                
                android:textColor="@color/Black87">
            </EditText>

            <TextView
                android:id="@+id/age_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/firstname_label"
                android:layout_below="@+id/firstname_label"
                android:layout_marginTop="24dp"
                android:text="@string/age_label"
                	    android:textAppearance="?android:attr/textAppearanceMedium"
                
                android:textColor="@color/HighlightColor" />

            <EditText
                android:id="@+id/age_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/age_label"
                android:layout_alignLeft="@+id/firstname_edit"
                android:layout_alignRight="@+id/firstname_edit"
                android:ems="10"
                android:hint="Your age"
                                                	    android:textAppearance="?android:attr/textAppearanceLarge"
                
                android:textColor="@color/Black87" >
            </EditText>

            <TextView
                android:id="@+id/city_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/age_label"
                android:layout_below="@+id/age_label"
                android:layout_marginTop="24dp"
                android:text="@string/city_label"
                	    android:textAppearance="?android:attr/textAppearanceMedium"
                
                android:textColor="@color/HighlightColor" />

            <EditText
                android:id="@+id/city_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/city_label"
                android:layout_alignLeft="@+id/age_edit"
                android:layout_alignRight="@+id/age_edit"
                android:ems="10"
                android:hint="Your city"
                                                	    android:textAppearance="?android:attr/textAppearanceLarge"
                
                android:textColor="@color/Black87" >
            </EditText>

            <TextView
                android:id="@+id/country_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/city_label"
                android:layout_below="@+id/city_label"
                android:layout_marginTop="24dp"
                android:text="@string/country_label"
                	    android:textAppearance="?android:attr/textAppearanceMedium"
                
                android:textColor="@color/HighlightColor" />

            <EditText
                android:id="@+id/country_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/country_label"
                android:layout_alignLeft="@+id/city_edit"
                android:layout_alignRight="@+id/city_edit"
                android:ems="10"
                android:hint="Your country"
                                                	    android:textAppearance="?android:attr/textAppearanceLarge"
                
                android:textColor="@color/Black87" >
            </EditText>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/create_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_picture"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/score_display"
        android:layout_marginBottom="48dp"
        android:background="@drawable/green_button"
        android:onClick="createProfile"
        android:text="@string/create" />

</RelativeLayout>